.metadata/.plugins/org.eclipse.cdt.ui/20-STM32F4_PRJ_GALVO_v2.build.log
02:18:43 **** Incremental Build of configuration Debug for project 20-STM32F4_PRJ_GALVO_v2 ****
make all 
Building file: ../startup/startup_stm32.s
Invoking: MCU GCC Assembler
/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/Debug
arm-none-eabi-as -mcpu=cortex-m4 -mthumb -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/inc" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/CMSIS/device" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/CMSIS/core" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/StdPeriph_Driver/inc" -g -o "startup/startup_stm32.o" "../startup/startup_stm32.s"
Finished building: ../startup/startup_stm32.s
 
Building file: /media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c
Invoking: MCU GCC Compiler
/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -DSTM32F429ZITx -D__cplusplus -DSTM32F429ZI -D__SOFTFP__ -DARM_MATH_CM4 -DSTM32F429I_DISC1 -DSTM32F4 -DSTM32 -DDEBUG -DUSE_STDPERIPH_DRIVER -DSTM32F429_439xx -UKEIL_IDE -UNO_FPU -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/inc" -I"/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/CMSIS/device" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/CMSIS/core" -I"/media/data/CODES/sw4stm32_workbench/20-STM32F4_PRJ_GALVO_v2/StdPeriph_Driver/inc" -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -MMD -MP -MF"src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.d" -MT"src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o" -o "src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o" "/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c"
In file included from /media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:31:0:
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.h:38:8: error: expected identifier or '(' before string constant
 extern "C" {
        ^
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:33:18: error: unknown type name 'MD_DAC_Channel_t'
 void MD_DAC_Init(MD_DAC_Channel_t DACx) {
                  ^
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:67:22: error: unknown type name 'MD_DAC_Channel_t'
 void MD_DAC_SetValue(MD_DAC_Channel_t DACx, uint16_t value) {
                      ^
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:67:45: error: unknown type name 'uint16_t'
 void MD_DAC_SetValue(MD_DAC_Channel_t DACx, uint16_t value) {
                                             ^
src/00-STM32F4_LIBRARY_MDB/subdir.mk:42: recipe for target 'src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o' failed
make: *** [src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o] Error 1

02:18:43 Build Finished (took 164ms)

